--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,8 @@
             input[type="text"] { width: 400px; }
 
             input[type="submit"] { width: 70px; }
+
+            img { max-width: 100%; }
         </style>
     </head>
     <body>
@@ -41,5 +43,6 @@
             <input type="submit">
         </form>
         <p><a href="https://github.com/ldesgoui/tf2blog_discord_webhook">Here's how I made this, and how to contact me.</a></p>
+	<img src="http://i.imgur.com/omEJwZ2.png"></img>
     </body>
 </html>
